# kikisen-yomiyomi-rust

./: .env.example  .gitignore  Cargo.toml  README.md
logs/: kikisen-yoiyomi.log.2026-05-15
src/: db.rs  helpers.rs  main.rs  music.rs  pager.rs  tts.rs  types.rs
src/commands/: auto_connect.rs  bot_whitelist.rs  developper.rs  manage_user.rs  misc.rs  mod.rs  music.rs  server_setting.rs  tc.rs  user_setting.rs  vc.rs  voice_styles.rs
src/events/: message.rs  mod.rs  voice.rs
